[package]
name = "http_wire"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
futures = "0.3.31"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
parking_lot = "0.12.5"
tokio = { version = "1.48.0", features = ["io-std", "io-util", "rt", "time"] }
